--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -16,6 +16,6 @@ jobs:
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses: helaili/jekyll-action
+      - uses: helaili/jekyll-action@2.2.0
         env:
           JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
