--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,4 +18,4 @@ jobs:
             ${{ runner.os }}-gems-
       - uses: helaili/jekyll-action@2.2.0
         env:
-          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
+          INPUT_TOKEN: ${{ secrets.TOKEN }}
